--- a/src/ui/lifeboat/images.qrc
+++ b/src/ui/lifeboat/images.qrc
@@ -82,5 +82,9 @@
         <file>resources/background4.jpg</file>
         <file>resources/background.jpg</file>
         <file>resources/seagull.png</file>
+        <file>resources/death_icon.png</file>
+        <file>resources/exhausted_icon.png</file>
+        <file>resources/thirsty_icon.png</file>
+        <file>resources/cur_player.jpg</file>
     </qresource>
 </RCC>
